--- a/src/lucy/arcsde/TLcyArcSDEDecoderAddOn.cfg
+++ b/src/lucy/arcsde/TLcyArcSDEDecoderAddOn.cfg
@@ -18,5 +18,5 @@ TLcyArcSDEDecoderAddOn.ArcSDEFormat.sharedModels = false
 
 TLcyArcSDEDecoderAddOn.ArcSDEFormat.defaultVectorStyle = lucy/arcsde/defaultArcSDEStyle.sty
 
-TLcyArcSDEDecoderAddOn.openUrlAction.menuBar.item=Map, Data, ArcSDE Client...
+TLcyArcSDEDecoderAddOn.openUrlAction.menuBar.item=Map, cartografia.Data, ArcSDE Client...
 TLcyArcSDEDecoderAddOn.openUrlAction.menuBar.groups=MapGroup, MapSubMenuGroup, DataPanelGroup
