--- a/src/lucy/asterix/lightspeed/TLcyLspASTERIXFormatAddOn.cfg
+++ b/src/lucy/asterix/lightspeed/TLcyLspASTERIXFormatAddOn.cfg
@@ -14,4 +14,4 @@ TLcyLspASTERIXFormatAddOn.defaultStyleFile=lucy/asterix/lightspeed/defaultStyleF
 # - The size of the icon in the .obj is assumed to be in metres
 # - The wings of the plane should be aligned with the horizontal axis (X-axis)
 # - The axis between nose and tail of the plain should be aligned with the vertical axis (Y-axis)
-TLcyLspASTERIXFormatAddOn.tracks.icon.source=Data/3d_icons/Airbus_A321.obj
+TLcyLspASTERIXFormatAddOn.tracks.icon.source=cartografia.Data/3d_icons/Airbus_A321.obj
