--- a/src/lucy/bingmaps/TLcyBingMapsAddOn.cfg
+++ b/src/lucy/bingmaps/TLcyBingMapsAddOn.cfg
@@ -1,14 +1,14 @@
 # Actions to open bing data on a map component
-TLcyBingMapsAddOn.roadLayerAction.menuBar.item = Map, Data, Bing Maps Roads
+TLcyBingMapsAddOn.roadLayerAction.menuBar.item = Map, cartografia.Data, Bing Maps Roads
 TLcyBingMapsAddOn.roadLayerAction.menuBar.groups = MapGroup, MapSubMenuGroup, DataPanelBingGroup
 
-TLcyBingMapsAddOn.aerialLayerAction.menuBar.item = Map, Data, Bing Maps Aerial
+TLcyBingMapsAddOn.aerialLayerAction.menuBar.item = Map, cartografia.Data, Bing Maps Aerial
 TLcyBingMapsAddOn.aerialLayerAction.menuBar.groups = MapGroup, MapSubMenuGroup, DataPanelBingGroup
 
-TLcyBingMapsAddOn.aerialLabelsLayerAction.menuBar.item = Map, Data, Bing Maps Labeled Aerial
+TLcyBingMapsAddOn.aerialLabelsLayerAction.menuBar.item = Map, cartografia.Data, Bing Maps Labeled Aerial
 TLcyBingMapsAddOn.aerialLabelsLayerAction.menuBar.groups = MapGroup, MapSubMenuGroup, DataPanelBingGroup
 
-TLcyBingMapsAddOn.openBingUrlAction.menuBar.item = Map, Data, Custom Bing Maps layer...
+TLcyBingMapsAddOn.openBingUrlAction.menuBar.item = Map, cartografia.Data, Custom Bing Maps layer...
 TLcyBingMapsAddOn.openBingUrlAction.menuBar.groups = MapGroup, MapSubMenuGroup, DataPanelBingGroup
 
 TLcyBingMapsAddOn.bingCredentialsAction.menuBar.item = Edit, Bing Credentials...
