--- a/src/lucy/dafif/dafifAddOn.cfg
+++ b/src/lucy/dafif/dafifAddOn.cfg
@@ -1,5 +1,5 @@
 # The following directory points to prepared dafif data (split according to ICAO regions)
-TLcyDAFIFAddOn.rootPath=Data/Dafift
+TLcyDAFIFAddOn.rootPath=cartografia.Data/Dafift
 
 # The following XML file lists the available DAFIF domain objects and their corresponding decoders.
 TLcyDAFIFAddOn.dafifLoaderConfigFile=lucy/dafif/dafifLoader.xml
@@ -27,7 +27,7 @@ TLcyDAFIFAddOn.layerConfiguration.3.menuBar.groups=MapGroup, MapSubMenuGroup, De
 TLcyDAFIFAddOn.layerConfiguration.3.menuBar.active=true
 
 # Please refer to 'resources/lucy/lucy.cfg' for more information about configuring menu items.
-TLcyDAFIFAddOn.dafifImportDataActiveSettable.menuBar.item=Map, Data, DAFIF
+TLcyDAFIFAddOn.dafifImportDataActiveSettable.menuBar.item=Map, cartografia.Data, DAFIF
 TLcyDAFIFAddOn.dafifImportDataActiveSettable.menuBar.groups=MapGroup, MapSubMenuGroup, DataPanelGroup
 
 # File type descriptor fields
