--- a/src/lucy/datarepository/datarepository.cfg
+++ b/src/lucy/datarepository/datarepository.cfg
@@ -1,4 +1,4 @@
-# Data repository configuration file
+# cartografia.Data repository configuration file
 #
 # With the data repository a file can be opened by clicking a menu item.
 #
@@ -17,30 +17,30 @@
 #
 # TLcyDataRepositoryAddOn.dataModel.ids = dataRoot,USRoot,worldRoot,customStyledWorld
 #
-# TLcyDataRepositoryAddOn.dataModel.dataRoot.sourceName=Data
-# TLcyDataRepositoryAddOn.dataModel.dataRoot.menuBar.item=Map,Data
+# TLcyDataRepositoryAddOn.dataModel.dataRoot.sourceName=cartografia.Data
+# TLcyDataRepositoryAddOn.dataModel.dataRoot.menuBar.item=Map,cartografia.Data
 # TLcyDataRepositoryAddOn.dataModel.dataRoot.menuBar.groups=MapGroup,MapSubMenuGroup
 #
-# TLcyDataRepositoryAddOn.dataModel.worldRoot.sourceName=Data/Shp/World
+# TLcyDataRepositoryAddOn.dataModel.worldRoot.sourceName=cartografia.Data/Shp/World
 # TLcyDataRepositoryAddOn.dataModel.worldRoot.menuBar.item=Shp,World
 # TLcyDataRepositoryAddOn.dataModel.worldRoot.menuBar.groups=ShpGroup,DefaultGroup
 #
-# TLcyDataRepositoryAddOn.dataModel.USRoot.sourceName=Data/Shp/US
+# TLcyDataRepositoryAddOn.dataModel.USRoot.sourceName=cartografia.Data/Shp/US
 # TLcyDataRepositoryAddOn.dataModel.USRoot.menuBar.item=Shp,US
 # TLcyDataRepositoryAddOn.dataModel.USRoot.menuBar.groups=ShpGroup,DefaultGroup
 #
-# TLcyDataRepositoryAddOn.dataModel.customStyledWorld.sourceName=Data/Shp/World/world.shp
-# TLcyDataRepositoryAddOn.dataModel.customStyledWorld.layerSourceName=Data/Shp/World/customWorldStyle.sty
+# TLcyDataRepositoryAddOn.dataModel.customStyledWorld.sourceName=cartografia.Data/Shp/World/world.shp
+# TLcyDataRepositoryAddOn.dataModel.customStyledWorld.layerSourceName=cartografia.Data/Shp/World/customWorldStyle.sty
 # TLcyDataRepositoryAddOn.dataModel.customStyledWorld.menuBar.item=Shp,US
 # TLcyDataRepositoryAddOn.dataModel.customStyledWorld.menuBar.groups=ShpGroup,DefaultGroup
 #
 #
 # In the above example there are 4 data repositories: dataRoot,USRoot,worldRoot,customStyledWorld.
-# 1) The files in the directory 'Data' that can be decoded are placed in the menu "Map, Data". All data in all
-#    subdirectories of 'Data' will be put in sub menu structures according to the file structure under 'Map, Data'.
-# 2) Similar for 'Data/Shp/World'.  They will be put under 'Shp,World' in the menu.
-# 3) Similar for 'Data/Shp/US'.  They will be put under 'Shp, US' in the menu.
-# 4) The file 'world.shp' in the directory 'Data/Shp/World' is placed in the menu "Shp, US, world.shp" if it can
+# 1) The files in the directory 'cartografia.Data' that can be decoded are placed in the menu "Map, cartografia.Data". All data in all
+#    subdirectories of 'cartografia.Data' will be put in sub menu structures according to the file structure under 'Map, cartografia.Data'.
+# 2) Similar for 'cartografia.Data/Shp/World'.  They will be put under 'Shp,World' in the menu.
+# 3) Similar for 'cartografia.Data/Shp/US'.  They will be put under 'Shp, US' in the menu.
+# 4) The file 'world.shp' in the directory 'cartografia.Data/Shp/World' is placed in the menu "Shp, US, world.shp" if it can
 #    be decoded.
 #    Optionally you can specify a 'layerSourceName' property for the file.  This layer source file contains
 #    style information for the layer (you can create style files using "File|Save Layer Style").
@@ -53,6 +53,6 @@
 TLcyDataRepositoryAddOn.dataModel.ids = dataRoot
 
 # Please refer to 'resources/lucy/lucy.cfg' for more information about configuring menu items.
-TLcyDataRepositoryAddOn.dataModel.dataRoot.sourceName=samples/Data
-TLcyDataRepositoryAddOn.dataModel.dataRoot.menuBar.item=Map,Data
+TLcyDataRepositoryAddOn.dataModel.dataRoot.sourceName=samples/cartografia.Data
+TLcyDataRepositoryAddOn.dataModel.dataRoot.menuBar.item=Map,cartografia.Data
 TLcyDataRepositoryAddOn.dataModel.dataRoot.menuBar.groups=MapGroup,MapSubMenuGroup
