--- a/src/lucy/fusionclient/TLcyFusionClientAddOn.cfg
+++ b/src/lucy/fusionclient/TLcyFusionClientAddOn.cfg
@@ -1,7 +1,7 @@
 # TLcyFusionClientAddOn Configuration
 
 # Please refer to 'resources/lucy/lucy.cfg' for more information about configuring menu items.
-TLcyFusionClientAddOn.fusionClientAction.menuBar.item = Map, Data, Fusion Client...
+TLcyFusionClientAddOn.fusionClientAction.menuBar.item = Map, cartografia.Data, Fusion Client...
 TLcyFusionClientAddOn.fusionClientAction.menuBar.groups = MapGroup, MapSubMenuGroup, DataPanelNetworkGroup
 
 TLcyFusionClientAddOn.fusionClientMultivaluedControllerActiveSettable.menuBar.item = Map, Controls, Fusion Client Multivalued
