--- a/src/lucy/lspmap/TLcyLspMapAddOn.cfg
+++ b/src/lucy/lspmap/TLcyLspMapAddOn.cfg
@@ -50,8 +50,8 @@ TLcyLspMapAddOn.configurationFile.touch = lucy/lspmap/TLcyLspMapAddOn_TouchMapCo
 #
 # This property applies to the newly created maps, e.g. using File | New | Map. Maps loaded from the
 # workspace are restored just as they were saved.
-TLcyLspMapAddOn.backgroundDataFileName.default=Data/Earth/World/tilerepository.cfg
-TLcyLspMapAddOn.backgroundDataFileName.touch=Data/Earth/World/tilerepository.cfg
+TLcyLspMapAddOn.backgroundDataFileName.default=cartografia.Data/Earth/World/tilerepository.cfg
+TLcyLspMapAddOn.backgroundDataFileName.touch=cartografia.Data/Earth/World/tilerepository.cfg
 
 # Property that determines if the map fits on newly added data
 TLcyLspMapAddOn.fitOnAddData=true
