--- a/src/lucy/map/map_addon.cfg
+++ b/src/lucy/map/map_addon.cfg
@@ -370,7 +370,7 @@ TLcyMapAddOn.globalLabelDeconflictionActiveSettable.menuBar.active=true
 # If you want to disable the loading of background data, define it empty.
 #
 # You can load BingMaps data by default as well: see TLcyBingMapsAddOn.cfg for more information
-backgroundDataFileName=Data/Shp/World/world.shp
+backgroundDataFileName=cartografia.Data/Shp/World/world.shp
 
 # Choose the factory to create the maps. Use the full qualified class name
 # of an extension of com.luciad.lucy.map.ALcyMapComponentFactory
