--- a/src/lucy/map/map_units.cfg
+++ b/src/lucy/map/map_units.cfg
@@ -307,7 +307,7 @@ TLcyMapEditUnitAddOn.point_formats.Georef.Georef\ MMmm\ MMmm.menuBar.groups=Edit
 
 
 # Model reference actions
-TLcyMapEditUnitAddOn.originalModelReferenceActiveSettable.menuBar.item=Edit, Coordinate System, Original Data Coordinate System
+TLcyMapEditUnitAddOn.originalModelReferenceActiveSettable.menuBar.item=Edit, Coordinate System, Original cartografia.Data Coordinate System
 TLcyMapEditUnitAddOn.originalModelReferenceActiveSettable.menuBar.groups=EditGroup, EditSubMenuGroup, DefaultGroup
 
 TLcyMapEditUnitAddOn.chooseReferenceActiveSettable.menuBar.item=Edit, Coordinate System, Choose coordinate system...
