--- a/src/lucy/map/mapoverview_addon.cfg
+++ b/src/lucy/map/mapoverview_addon.cfg
@@ -191,7 +191,7 @@ map.scales.insert=false
 # for an example of '.nr' suffix).
 # This property applies to all newly created map overviews, e.g. using File | New | Map Overview.
 # Map overviews loaded from the workspace are restored just as they were saved.
-# map_overview.backgroundDataFileName=Data/Shp/World/world.shp
+# map_overview.backgroundDataFileName=cartografia.Data/Shp/World/world.shp
 
 # The application pane location of the map overview
 # This property applies to all newly created map overviews, e.g. using File | New | Map Overview.
