--- a/src/lucy/s63/TLcyS63FormatAddOn.cfg
+++ b/src/lucy/s63/TLcyS63FormatAddOn.cfg
@@ -1,7 +1,7 @@
 # Location of the Basic and Meta permit files. Both can be defined as a comma-separated list of locations.
 # The properties are optional.  Lucy will auto-detect permits if they are in the same directory as the data.
-#TLcyS63FormatAddOn.basicPermitSource=Data/Ecdis/Encrypted/ENC.PMT
-#TLcyS63FormatAddOn.metaPermitSource=Data/Ecdis/Encrypted/PERMIT.TXT
+#TLcyS63FormatAddOn.basicPermitSource=cartografia.Data/Ecdis/Encrypted/ENC.PMT
+#TLcyS63FormatAddOn.metaPermitSource=cartografia.Data/Ecdis/Encrypted/PERMIT.TXT
 
 # Location of the SA Certificates and Public Keys. Both can be defined as a comma-separated list of locations.
 # At least one of both should be specified.
