--- a/src/lucy/vpf/vpf_addon.cfg
+++ b/src/lucy/vpf/vpf_addon.cfg
@@ -51,7 +51,7 @@ TLcyVPFDecoderAddOn.CGMFileNamePrefix = GeoSym/
 
 
 # Please refer to 'resources/lucy/lucy.cfg' for more information about configuring menu items.
-TLcyVPFDecoderAddOn.VPFLoaderActiveSettable.menuBar.item=Map, Data, VPF Browser
+TLcyVPFDecoderAddOn.VPFLoaderActiveSettable.menuBar.item=Map, cartografia.Data, VPF Browser
 TLcyVPFDecoderAddOn.VPFLoaderActiveSettable.menuBar.groups=MapGroup, MapSubMenuGroup, DataPanelGroup
 
 # File type descriptor fields
