--- a/src/lucy/wcsclient/wcsclient_addon.cfg
+++ b/src/lucy/wcsclient/wcsclient_addon.cfg
@@ -1,5 +1,5 @@
 # Please refer to 'resources/lucy/lucy.cfg' for more information about configuring menu items.
-TLcyWCSClientAddOn.WCSClientAction.menuBar.item=Map, Data, WCS Client...
+TLcyWCSClientAddOn.WCSClientAction.menuBar.item=Map, cartografia.Data, WCS Client...
 TLcyWCSClientAddOn.WCSClientAction.menuBar.groups=MapGroup, MapSubMenuGroup, DataPanelNetworkGroup
 
 # The path to a file with predefined URLs of WCS servers.
