--- a/src/lucy/wfsclient/wfsclient_addon.cfg
+++ b/src/lucy/wfsclient/wfsclient_addon.cfg
@@ -11,7 +11,7 @@ TLcyWFSClientAddOn.asynchronous.minimumThreadPriority = 0
 TLcyWFSClientAddOn.labelPlacementGroup = background
 
 # Please refer to 'resources/lucy/lucy.cfg' for more information about configuring menu items.
-TLcyWFSClientAddOn.WFSClientAction.menuBar.item=Map, Data, WFS Client...
+TLcyWFSClientAddOn.WFSClientAction.menuBar.item=Map, cartografia.Data, WFS Client...
 TLcyWFSClientAddOn.WFSClientAction.menuBar.groups=MapGroup, MapSubMenuGroup, DataPanelNetworkGroup
 
 
