--- a/src/lucy/wmsclient/wmsclient_addon.cfg
+++ b/src/lucy/wmsclient/wmsclient_addon.cfg
@@ -1,5 +1,5 @@
 # Please refer to 'resources/lucy/lucy.cfg' for more information about configuring menu items.
-TLcyWMSClientAddOn.WMSClientAction.menuBar.item=Map, Data, WMS Client...
+TLcyWMSClientAddOn.WMSClientAction.menuBar.item=Map, cartografia.Data, WMS Client...
 TLcyWMSClientAddOn.WMSClientAction.menuBar.groups=MapGroup, MapSubMenuGroup, DataPanelNetworkGroup
 
 # The path to a file with predefined URLs of WMS servers.
