--- a/src/lucy/wmts/TLcyWMTSClientAddOn.cfg
+++ b/src/lucy/wmts/TLcyWMTSClientAddOn.cfg
@@ -1,5 +1,5 @@
 # Actions to open wmts data on a map component
-TLcyWMTSClientAddOn.WMTSConnectionAction.menuBar.item = Map, Data, WMTS Client...
+TLcyWMTSClientAddOn.WMTSConnectionAction.menuBar.item = Map, cartografia.Data, WMTS Client...
 TLcyWMTSClientAddOn.WMTSConnectionAction.menuBar.groups = MapGroup, MapSubMenuGroup, DataPanelNetworkGroup
 
 # These properties control the asynchronous painting of WMTS data.
